--- a/the_tris/lobby.html
+++ b/the_tris/lobby.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Tris: Lobby</title>
+    <title>The Trys: Lobby</title>
     <link type="text/css" rel="stylesheet" href="static/style.css">
     <script src="static/lobby.js"></script>
     <audio id="audio" autoplay loop>
