--- a/the_tris/lobby.html
+++ b/the_tris/lobby.html
@@ -25,7 +25,7 @@
                 <div class="singlePlayerIcon"></div>1 Player
             </div>
             <div class="chPlayer" onclick="name(2)">
-                <div class="multiPlayerIcon"></div>2 Player
+                <div class="multiPlayerIcon"></div>2 Players
             </div>
         </div>
     </div>
